--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
 body {
+  background-image: url("wallpaper.png");
+  background-size: 100% auto;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Crimson Text', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.error {
+  color: maroon;
+}
+
+.nugget {
+  margin: 2em .5em;
+  border-radius: 10px;
+  opacity: 90%;
+  background-color: white;
+  padding: 2%;
+}
+#candy-canes {
+  height: 75px;
+}
+#root {
+  width:100%;
+  display: flex;
+  justify-content: center;
+}
+
+#candy-wrapper {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
